# FreeRTOS-on-Raspberry-Pi-Pico

./: CMakeLists.txt  README.md
src/: rtos_blink.c
